# jamspot

./: CMakeLists.txt  README.md
cmake/: gfxspot.cmake
include/spot/jam/: config.h  entity.h  flag.h  game.h  map.h  player.h  tile.h  tileset.h
include/spot/jam/editor/: editor.h
include/spot/jam/serialization/: config.h  entity.h  map.h  node.h  serialization.h  tile.h  tileset.h
src/: CMakeLists.txt  entity.cc  game.cc  main.cc  map.cc  player.cc  tile.cc  tileset.cc
src/editor/: editor.cc  map.cc  tileset.cc
src/serialization/: config.cc  entity.cc  map.cc  node.cc  serialization.cc  tile.cc  tileset.cc
